trying GCS option

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,8 @@
   {% for i in movies %}
   <div class="shadow-sm p-3 mb-5 bg-white rounded">
     <div class="card" class="shadow p-3 mb-5 bg-white rounded">
-      <!-- <img class="card-img-top" src="{{i.poster}}" alt="Card image cap" /> -->
-      <img class="card-img-top" src="/static/images/{{i.movie_id}}.jpg" alt="Card image cap" />
+      <img class="card-img-top" src="https://storage.googleapis.com/pymovies-posters/{{i.movie_id}}.jpg" alt="Card image cap" />
+      <!-- <img class="card-img-top" src="/static/images/{{i.movie_id}}.jpg" alt="Card image cap" /> -->
       <div class="card-body">
         <h5 class="card-title">{{i.name}} ({{i.year}})</h5>
         <p class="card-text">{{i.desc}}</p>
